[project]
name = "omniagent-sandbox"
version = "0.2.2"
description = "OmniAgent sandbox runtime: per-command subprocess with cwd persistence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "fastapi>=0.128.0",
    "langchain-mcp-adapters>=0.2.1",
    "markitdown>=0.1.4",
    "minio>=7.2.20",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pypdf>=6.7.0",
    "python-multipart>=0.0.21",
    "reportlab>=4.4.10",
    "uvicorn>=0.40.0",
]
