[project]
name = "persistent-session-runtime"
version = "0.1.0"
description = "A runtime that maintains a persistent shell session across command executions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "langchain-mcp-adapters>=0.2.1",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
